Post current version.

--- a/mss.bib
+++ b/mss.bib
@@ -1,11 +1,12 @@
 @inproceedings{Andrysco2016,
 author = "Marc Andryso and Ranjit Jhala and Sorin Lerner",
 title = "Printing Floating-Point Numbers: A Faster, Always Correct Method",
-booktitle = "Proceedings of the 43rd Annual {ACM} {SIGPLAN-SIGACT} Symposium on Principles of Programming Languages (POPL '16)",
+booktitle = "Proceedings of the 43rd Annual \ssc{acm} \ssc{sigplan-sigact} Symposium on Principles of Programming Languages (\ssc{popl} '16)",
 year = 2016,
 url = "https://dl.acm.org/doi/10.1145/2837614.2837654",
 pages = "555--567",
 doi = "10.1145/2837614.2837654",
+urldate = {2024-03-10}
 }
 
 @book{Apple1994,
@@ -15,6 +16,7 @@ publisher = "Addison-Wesley",
 address = "Boston",
 year = 1994,
 url = "https://developer.apple.com/library/archive/documentation/mac/pdf/PPC\_System\_Software/Intro\_to\_PowerPC.pdf",
+urldate = {2024-03-10}
 }
 
 @article{Babuska1969,
@@ -26,67 +28,67 @@ year = 1969,
 pages = "11--23",
 }
 
-@misc{Cerlane2018,
+@software{Cerlane2018,
 author = "Leong Cerlane",
 title = "SoftPosit",
 note = "Git repository",
 year = 2018,
 url = "https://gitlab.com/cerlane/SoftPosit",
+urldate = {2024-03-10}
 }
 
 @InProceedings{Chohra2016,
 author="Chohra, Chemseddine
 and Langlois, Philippe
 and Parello, David",
-editor="Nehmeier, Marco
-and Wolff von Gudenberg, J{\"u}rgen
-and Tucker, Warwick",
-title="Efficiency of Reproducible Level 1 BLAS",
+editor="Marco Nehmeier and J{\"u}rgen Wolff von Gudenberg and Warwick Tucker",
+title="Efficiency of Reproducible Level 1 {\sc blas}",
 booktitle="Scientific Computing, Computer Arithmetic, and Validated Numerics",
 year="2016",
 publisher="Springer International Publishing",
 address="Cham",
 pages="99--108",
-abstract="Numerical reproducibility failures appear in massively parallel floating-point computations. One way to guarantee this reproducibility is to extend the IEEE-754 correct rounding to larger computing sequences, e.g. to the BLAS. Is the extra cost for numerical reproducibility acceptable in practice? We present solutions and experiments for the level 1 BLAS and we conclude about their efficiency.",
-isbn="978-3-319-31769-4"
 }
 
 @inproceedings{Citron1998,
 author = "D. Citron and D. Feitelson and L. Rudolph",
 title = "Accelerating multi-media processing by implementing memoing in multiplication and division units",
-booktitle = "Proceedings of 8th International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS-VIII)",
+booktitle = "Proceedings of 8th International Conference on Architectural Support for Programming Languages and Operating Systems (\ssc{asplos-viii})",
 year = 1998,
 pages = "252--261",
 }
 
 % https://en.cppreference.com/w/c/numeric/fenv
-@misc{CPPRef,
+@online{CPPRef,
 title = "Floating-point environment",
 journal = "C++ Reference",
 year = 2023,
 url = "https://en.cppreference.com/w/c/numeric/fenv",
+urldate = {2024-03-10}
 }
 
-@misc{Dawson2013,
+@online{Dawson2013,
 author = "Bruce Dawson",
 title = "Floating-Point Determinism",
-journal = "Random ASCII",
+journal = "Random {\ssc{ascii}}",
 year = 2013,
 url = "https://randomascii.wordpress.com/2013/07/16/floating-point-determinism/",
+urldate = {2024-03-10}
 }
 
-@misc{Demmel2017,
-author = "James Demmel and M. Gates and G. Henry and X. S. Li and J. Riedy and P. T. P. Tang"},
-title = "A Proposal for a Next-Generation {BLAS}",
+@online{Demmel2017,
+author = "James Demmel and M. Gates and G. Henry and X. S. Li and J. Riedy and P. T. P. Tang",
+title = "A Proposal for a Next-Generation {\sc blas}",
 year = 2017,
 url = "https://docs.google.com/document/d/1DY4ImZT1coqri2382GusXgBTTTVdBDvtD5I14QHp9OE/edit#heading=h.jtgipeoidy9",
+urldate = {2024-03-10}
 }
 
-%  Edelman, Alan (January 1, 1997). "The Mathematics of the Pentium Division Bug" (PDF). SIAM Review. 39 (1): 54–67. Bibcode:1997SIAMR..39...54E. doi:10.1137/S0036144595293959. Retrieved April 11, 2021.
+%  Edelman, Alan (January 1, 1997). "The Mathematics of the Pentium Division Bug" (PDF). {\sc siam} Review. 39 (1): 54–67. Bibcode:1997SIAMR..39...54E. doi:10.1137/S0036144595293959. Retrieved April 11, 2021.
 @article{Edelman1997,
 author = "Alan Edelman",
 title = "The Mathematics of the Pentium Division Bug",
-journal = "SIAM Review",
+journal = "\ssc{siam} Review",
 volume = 39,
 number = 1,
 year = 1997,
@@ -96,80 +98,100 @@ doi = "10.1137/S0036144595293959",
 
 @phdthesis{Figueroa2000,
 author = "S. A. {Figueroa del Cid}",
-title = "A Rigorous Framework for Fully Supporting the {IEEE} Standard for Floating-Point Arithmetic in High-Level Programming Languages",
+title = "A Rigorous Framework for Fully Supporting the {\sc ieee} Standard for Floating-Point Arithmetic in High-Level Programming Languages",
 school = "New York University",
 year = 2000,
-month = "January",
+month = 1,
 }
 
-@misc{Foote1999,
+@online{Foote1999,
 author = "Brian Foote and Joseph Yoder",
 title = "Big Ball of Mud",
 year = 1999,
 url = "http://laputan.org/mud/mud.html",
+urldate = {2024-03-10}
 }
 
 @article{Goldberg1991,
 author = "David Goldberg",
 title = "What Every Computer Scientist Should Know About Floating-Point Arithmetic",
-journal = "ACM Computing Surveys",
+journal = "\ssc{acm} Computing Surveys",
 volume = 23,
 number = 1,
 year = 1991,
 pages = "5--48",
 url = "https://dl.acm.org/doi/pdf/10.1145/103162.103163",
+urldate = {2024-03-10}
 }
 
 @book{Gustafson2015,
 author = "John L. Gustafson",
 title = "The End of Error: Unum Computing",
-publisher = "A K Peters/CRC Press",
+publisher = "A. K. Peters/{\sc crc} Press",
 year = 2015,
 isbn = "978-1-4822-3986-7",
 }
 
-@misc{Gustafson2017,
+@online{Gustafson2017,
 author = "John L. Gustafson",
 title = "Posit Arithmetic",
 year = 2017,
 url = "https://posithub.org/docs/Posits4.pdf",
+urldate = {2024-03-10}
 }
 
-@misc{Gustafson2017a,
+@online{Gustafson2017a,
 author = "John L. Gustafson",
 title = "Beyond Floating Point: Next Generation Computer Arithmetic (Stanford Seminar)",
 year = 2017,
 url = "https://www.youtube.com/watch?v=aP0Y1uAA-2Y",
+urldate = {2024-03-10}
 }
 
-@misc{Hauser2018,
+@article{Gustafson2017b,
+author = "John L. Gustafson and Isaac Yonemoto",
+title = "Beating Floating Point at its Own Game: Posit Arithmetic",
+journal = "Journal of Supercomputing Frontiers and Innovations",
+volume = 4,
+number = 2,
+year = 2017,
+pages = "71--86",
+doi = "10.14529/jsfi170206",
+}
+
+@software{Hauser2018,
 author = "John R. Hauser",
 title = "Berkeley SoftFloat Release 3e",
 year = 2018,
 url = "http://www.jhauser.us/arithmetic/SoftFloat-3/doc/SoftFloat.html",
+urldate = {2024-03-10}
 }
 
 @book{Higham2002,
 author = "Nicholas J. Higham",
 title = "Accuracy and Stability of Numerical Algorithms",
 edition = "2nd ed",
-publisher = "SIAM",
+publisher = "{\sc siam}",
 address = "Philadelphia",
 year = 2002,
 }
 
-@misc{IEEE754-2008,
-author = "IEEE",
-title = "754-2008 {IEEE} Standard for Floating-Point Arithmetic",
+@techreport{IEEE754-2008,
+author = "{\sc ieee}",
+title = "754-2008 {{\sc ieee}} Standard for Floating-Point Arithmetic",
 year = 2008,
 url = "https://ieeexplore.ieee.org/document/4610935",
+institution = "Institute of Electrical and Electronics Engineers",
+urldate = {2024-03-10}
 }
 
-@misc{ISO9899,
-author = "ISO/IEC",
-title = "ISO/IEC 9899:2018 Information technology -- Programming languages -- {C}",
+@techreport{ISO9899,
+author = "{\sc iso}/{\sc iec}",
+title = "\ssc{iso}/\ssc{iec} 9899:2018 Information technology -- Programming languages -- {C}",
 year = 2018,
 url = "https://www.iso.org/standard/74528.html",
+institution = "International Organization for Standardization",
+urldate = {2024-03-10}
 }
 
 @article{Izquierdo2006,
@@ -180,18 +202,21 @@ volume = 9,
 number = 4,
 year = 2006,
 url = "https://www.jasss.org/9/4/4.html",
+urldate = {2024-03-10}
 }
 
 @book{Jones2008,
 author = "Derek M. Jones",
 title = "The New C Standard:  An Economic and Cultural Commentary",
 year = 2008,
+url = "http://www.knosof.co.uk/cbook/cbook.html",
+urldate = {2024-03-10}
 }
 
 @article{Kahan1965,
 author = "William Kahan",
 title = "Further remarks on reducing truncation errors",
-journal = "Communications of the ACM",
+journal = "Communications of the \ssc{acm}",
 volume = 8,
 number = 1,
 year = 1965,
@@ -199,42 +224,47 @@ pages = "40",
 doi = "10.1145/363707.363723",
 }
 
-@misc{Kahan1997,
+@online{Kahan1997,
 author = "William Kahan",
-title = "Lecture Notes on the Status of {IEEE} {Standard} 754 for Binary Floating-Point Arithmetic",
+title = "Lecture Notes on the Status of {{\sc ieee}} {Standard} 754 for Binary Floating-Point Arithmetic",
 year = 1997,
 url = "https://people.eecs.berkeley.edu/~wkahan/ieee754status/IEEE754.PDF",
+urldate = {2024-03-10}
 }
 
-@misc{Kahan1997a,
+@online{Kahan1997a,
 author = "William Kahan",
 title = "The Baleful Effect of Computer Languages and Benchmarks upon Applied Mathematics, Physics and Chemistry ({John} {von} {Neumann} Lecture)",
 year = 1997,
 url = "https://people.eecs.berkeley.edu/~wkahan/SIAMjvnl.pdf",
+urldate = {2024-03-10}
 }
 
-@misc{Kharva2020,
+@online{Kharva2020,
 author = "Paresh Kharva",
-title = "{TensorFloat-32} in the {A100} {GPU} Accelerates {AI} Training, {HPC} up to 20x",
-journal = "NVIDIA Developer Blog",
+title = "{TensorFloat-32} in the {A100} {{\sc gpu}} Accelerates {AI} Training, {\it {\sc hpc}} up to 20x",
+journal = "{\ssc{nvidia}} Developer Blog",
 year = 2020,
 url = "https://blogs.nvidia.com/blog/2020/05/14/tensorfloat-32-precision-format/",
+urldate = {2024-03-10}
 }
 
-@misc{KloudKoder2022,
-author = "KloudKoder",
-title = " Floating-point rounding mode control prototyping ({WebAssembly} Issue \#1456)",
+@online{KloudKoder2022,
+author = "@KloudKoder",
+title = "Floating-point rounding mode control prototyping ({WebAssembly} Issue \#1456)",
 year = 2022,
 note = "Git repository",
 url = "https://github.com/WebAssembly/design/issues/1456",
+urldate = {2024-03-10}
 }
 
-@misc{LeBrun2018,
+@online{LeBrun2018,
 author = "Laurent Le Brun",
 title = "Making floating point numbers smaller",
 journal = "Ctrl-Alt-Test",
 year = 2018,
 url = "https://www.ctrl-alt-test.fr/2018/making-floating-point-numbers-smaller/",
+urldate = {2024-03-10}
 }
 
 @article{MacDonald1991,
@@ -248,46 +278,52 @@ pages = "31--48",
 doi = "10.1007/BF00155856",
 }
 
-@misc{Monk2020,
-author = "Philip C. Monk",
+@online{Monk2020,
+author = "Philip C. Monk \patp{wicdev-wisryt}",
 title = "Urbit Precepts",
 year = 2020,
 url = "https://urbit.org/blog/precepts",
+urldate = {2024-03-10}
 }
 
-@misc{Monk2020a,
-author = "Philip C. Monk",
+@online{Monk2020a,
+author = "Philip C. Monk \patp{wicdev-wisryt}",
 title = "Urbit Precepts (Discussion)",
 year = 2020,
 url = "https://urbit.org/blog/precepts-discussion",
+urldate = {2024-03-10}
 }
 
-@misc{Peters2021,
+@article{Peters2021,
 author = "Christoph Peters",
-title = "{fma}:  A faster, more accurate instruction",
+title = "{\sc fma}:  A faster, more accurate instruction",
 journal = "Moments in Graphics",
 year = 2021,
 url = "https://momentsingraphics.de/FMA.html",
+urldate = {2024-03-10}
 }
 
 @techreport{Posit2022,
-author = "Posit Working Group",
-title = "Standard for Posit™ Arithmetic",
+author = {{Posit Working Group}},
+title = "Standard for {Posit™} Arithmetic",
 year = 2022,
-url = "https://posithub.org/docs/posit\_standard-2.pdf",
+institution = {{Posit Working Group}},
+url = "https://posithub.org/docs/posit_standard-2.pdf",
+urldate = {2024-03-10}
 }
 
-@misc{ReproBLAS,
+@software{ReproBLAS,
 author = "Peter Ahrens and Hong Diep Nguyen and James Demmel",
-title = "{ReproBLAS}:  Reproducible Basic Linear Algebra Subprograms",
+title = "{\texttt{ReproBLAS}}:  Reproducible {Basic Linear Algebra Subprograms}",
 year = 2018,
 url = "https://bebop.cs.berkeley.edu/reproblas",
+urldate = {2024-03-10}
 }
 
 @inproceedings{Risse2016,
 author = "Thomas Risse",
-title = "It's Time for Unums—an Alternative to {IEEE} 754 Floats and Doubles",
-booktitle = "Proceedings of the Fifth International Conference on Signal \& Image Processing (SIP-2016)",
+title = "It's Time for Unums—an Alternative to {{\sc ieee}} 754 Floats and Doubles",
+booktitle = "Proceedings of the Fifth International Conference on Signal \& Image Processing (\ssc{sip}-2016)",
 year = 2016,
 pages = "50--51",
 }
@@ -295,55 +331,105 @@ pages = "50--51",
 @inproceedings{Steele1991,
 author = "Guy L. Steele Jr. and Jon L. White",
 title = "How to print floating-point numbers accurately",
-booktitle = "Proceedings of the 1990 {ACM} {SIGPLAN} Conference on Programming Language Design and Implementation (PLDI '90)",
+booktitle = "Proceedings of the 1990 \ssc{acm} \ssc{sigplan} Conference on Programming Language Design and Implementation (\ssc{pldi} '90)",
 year = 1991,
 pages = "372--389",
 url = "http://kurtstephens.com/files/p372-steele.pdf",
+urldate = {2024-03-10}
 }
 
 @techreport{Thall2007,
 author = "Andrew Thall",
-title = "Extended-Precision Floating-Point Numbers for {GPU} Computation",
+title = "Extended-Precision Floating-Point Numbers for {{\sc gpu}} Computation",
 institution = "The University of North Carolina at Chapel Hill",
 year = 2007,
-number = "CIM-007-01",
+number = "{\sc cim}-007-01",
 url = "http://andrewthall.org/papers/df64\_qf128.pdf",
+urldate = {2024-03-10}
 }
 
-@misc{UrbitBreach,
-author = "Urbit",
+@online{UrbitBreach,
+author = "Tlon Corporation",
 title = "The Last Network Breach",
 year = 2020,
 url = "https://roadmap.urbit.org/project/last-network-breach",
+urldate = {2024-03-10}
 }
 
-@misc{UrbitEpoch,
-author = "\texttt{\textasciitilde mastyr-bottec}",
+@software{UrbitEpoch,
+author = "Matthew Levan \patp{mastyr-bottec}",
 title = "Epoch System",
 year = 2020,
 url = "https://roadmap.urbit.org/project/epoch-system",
+urldate = {2024-03-10}
 }
 
-@misc{Urbit,
-author = "Urbit",
+@software{Urbit,
+author = "Urbit Foundation",
 title = "Urbit",
 year = 2023,
 note = "Git repository",
 url = "https://github.com/urbit/urbit",
+urldate = {2024-03-10}
 }
 
-@misc{UWasm,
-author = "\texttt{\textasciitilde dozreg-toplud}",
-title = "UWasm",
+@software{UrWasm,
+author = "K. Afonin \patp{dozreg-toplud}",
+title = "UrWasm",
 year = 2023,
 note = "Git repository",
 url = "https://github.com/Quodss/urwasm",
+urldate = {2024-03-10}
 }
 
-@misc{Wang2019,
+@online{Wang2019,
 author = "Shibo Wang and Pankaj Kanwar",
-title = "{BFloat16}: The secret to high performance on Cloud {TPUs}",
+title = "{BFloat16}: The secret to high performance on Cloud {{\sc tpu}s}",
 journal = "Google Cloud Blog",
 year = 2019,
 url = "https://cloud.google.com/blog/products/ai-machine-learning/bfloat16-the-secret-to-high-performance-on-cloud-tpus",
+urldate = {2024-03-10}
+}
+
+@online{GCCWiki,
+author = "{{\sc gnu} Project}",
+title = "Software Floating Point",
+year = 2008,
+url = "https://gcc.gnu.org/wiki/Software_floating_point",
+urldate = {2024-03-10}
+}
+
+@techreport{Sidwell2006,
+author = "Nathan Sidwell and Joseph Myers",
+title = "Improving Software Floating Point Support",
+institution = "CodeSourcery",
+year = 2006,
+url = "https://hashingit.com/elements/research-resources/2006-01-improving_software_floating_point_support.pdf",
+urldate = "2023-03-09",
+}
+
+@inproceedings{Chen2018,
+author = "Jianyu Chen and Zaid Al-Ars and H. Peter Hofstee",
+title = "A matrix-multiply unit for posits in reconfigurable logic leveraging (open) {\sc capi}",
+booktitle = "Proceedings of the Conference for Next Generation Arithmetic",
+year = 2018,
+pages = "1--5",
+}
+
+@inproceedings{vanDam2019,
+author = "Laurens {van Dam} and Johan Peltenburg and Zaid Al-Ars and H. Peter Hofstee",
+title = "An Accelerator for Posit Arithmetic Targeting Posit {Level 1} \ssc{blas} Routines and Pair-\ssc{hmm}",
+booktitle = "Proceedings of the Conference for Next Generation Arithmetic",
+year = 2019,
+pages = "1--10",
+}
+
+@techreport{Koenig2018,
+author = "Jack Koenig",
+title = "A Hardware Accelerator for Computing an Exact Dot Product",
+institution = "University of California, Berkeley",
+year = 2018,
+number = "\ssc{ucb}/\ssc{eecs}-2018-51",
+url = "https://www2.eecs.berkeley.edu/Pubs/TechRpts/2018/EECS-2018-51.pdf",
+urldate = {2024-03-10}
 }
